ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vite-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: devtest1.nirmata.co
      http:
        paths:
          - path: /npm
            pathType: Prefix
            backend:
              service:
                name: vite-app-service 
                port:
                  number: 80
